--- a/style.css
+++ b/style.css
@@ -1,5 +1,91 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
 
+/*  CSS Reset                  */
+
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+/*
+    2. Remove default margin
+  */
+* {
+    margin: 0;
+}
+
+/*
+    3. Allow percentage-based heights in the application
+  */
+html,
+body {
+    height: 100%;
+}
+
+/*
+    Typographic tweaks!
+    4. Add accessible line-height
+    5. Improve text rendering
+  */
+body {
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+}
+
+/*
+    6. Improve media defaults
+  */
+img,
+picture,
+video,
+canvas,
+svg {
+    display: block;
+    max-width: 100%;
+}
+
+/*
+    7. Remove built-in form typography styles
+  */
+input,
+button,
+textarea,
+select {
+    font: inherit;
+}
+
+/*
+    8. Avoid text overflows
+  */
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    overflow-wrap: break-word;
+}
+
+/*
+    9. Create a root stacking context
+  */
+#root,
+#__next {
+    isolation: isolate;
+}
+
+html,
+body {
+    margin: 0;
+    height: 100%;
+    overflow: auto
+}
+
 :root {
     --clr-white: hsl(0, 0%, 100%);
     --clr-light-gray: hsl(212, 45%, 89%);
@@ -13,9 +99,10 @@ body {
     height: 100%;
 }
 
-.container {
-    margin: 23vh auto;
-    width: 15rem;
+main {
+    margin: 7rem auto;
+    width: 17rem;
+    max-width: 95%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -29,7 +116,8 @@ img {
     border-radius: 0.5rem;
 }
 
-h1, p {
+h1,
+p {
     font-family: 'Outfit', sans-serif;
     text-align: center;
 }
@@ -40,12 +128,18 @@ h1 {
     color: var(--clr-dark-blue);
 }
 
-p  {
+p {
     font-weight: 400;
     font-size: 1rem;
     color: var(--clr-gray-blue);
 }
 
 
-.attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+.attribution {
+    font-size: 11px;
+    text-align: center;
+}
+
+.attribution a {
+    color: hsl(228, 45%, 44%);
+}
