--- a/style.css
+++ b/style.css
@@ -100,9 +100,8 @@ body {
 }
 
 main {
-    margin: 8rem auto;
-    width: 17rem;
-    height: 25rem;
+    margin: 5rem auto;
+    width: 19rem;
     max-width: 95%;
     display: flex;
     flex-direction: column;
@@ -121,9 +120,12 @@ h1,
 p {
     font-family: 'Outfit', sans-serif;
     text-align: center;
+    margin-bottom: 1.5rem;
 }
 
 h1 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     font-weight: 700;
     font-size: 1.3rem;
     color: var(--clr-dark-blue);
